--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -184,18 +184,33 @@ body{
     height:30vh !important;
 }
 
+.nav-cor{
+    background-color: rgb(241, 239, 239);
+}
+
+.logo-nba{
+    width: 8em; 
+    height: 4em;
+}
+
+
+.imagem-carrosel-um{
+    object-fit: contain;
+    height: 80vh;
+    width: 80vw;
+    margin: 2em;
+}
+
 .container-card{
     display: grid;
     margin: 80px;
     grid-template-columns: repeat(5,1fr);
     grid-auto-rows: 300px;
-
 }
 
 .tamanho{
     height: 100% !important;
     width: 100% !important;
-
 }
 
 .card{
@@ -203,18 +218,22 @@ body{
     height: 320px; 
 }
 
-
 .card:hover {
     transition: 0.4s ease-in-out;
     box-shadow: 0px 0px 30px 20px #FFFFFF, 0px 0px 4px 0px rgb(11 44 88);
     z-index: 10;
 }
 
-
 .card-img-top {
     width: 100%;
     height: 15vw;
     object-fit: cover;
+}
+
+.texto{
+    color: black;
+    text-align: center;
+    margin-top: 2rem;
 }
 
 .pictures{
@@ -226,6 +245,22 @@ body{
 .pictures{
     width:30vh !important;
     border-radius:30vh !important;
+}
+
+::-webkit-scrollbar{
+    width: 0.5rem;
+
+}
+::-webkit-scrollbar-track{
+    background-color: #888888;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #1d4389;
+    border-radius: 2rem;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: #0a58ca;
 }
 
 
